[package]
name = "icarus"
version = "0.1.0"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2018"

[dependencies]
tracing = "^0.1"
tracing-subscriber = "^0.2"
tracing-futures = "^0.2"
rustls = "^0.19"
rustls-pemfile = "^0.2"
async-rustls = "^0.2"
maud = "^0.22"
async-trait = "^0.1"
mime_guess = "^2.0"
regex = "^1.4"
url = "^2.2"
nom = "^6.1"
smallvec = "^1.6"

[dependencies.mlua]
version = "^0.5"
features = ["luajit", "vendored", "async", "send"]

[dependencies.mimalloc]
version = "^0.1"
default-features = false

[dependencies.hyper]
version = "^0.14"
features = ["http1", "http2", "server"]

[dependencies.tokio]
version = "^1.4"
features = ["macros", "rt-multi-thread", "io-util", "net", "fs"]

[dependencies.tokio-util]
version = "^0.6"
features = ["compat"]
