[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.1.12"
hyper = { version = "0.14.18", features = ["server", "stream", "http1", "http2"] }
num_cpus = "1.13.1"
thiserror = "1.0.30"
tokio = { version = "1.18.4", features = ["rt-multi-thread", "net", "io-util", "tracing", "macros"] }
tokio-rustls = "0.23.3"
tower = { version = "0.4.12", features = ["util"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
rustls = "0.20.4"
